--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server": "node ./bin/run"
   },
   "dependencies": {
+    "calder-gl": "github:calder-gl/calder#master",
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
