--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "calder-gl": "github:calder-gl/calder#master",
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
+    "milligram": "^1.3.0",
     "morgan": "^1.9.0",
     "pug": "^2.0.0-rc.4"
   },
