--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lodash": "^4.17.10",
     "milligram": "^1.3.0",
     "morgan": "^1.9.0",
-    "pug": "^2.0.0-rc.4"
+    "pug": "^2.0.0-rc.4",
+    "random-seed": "^0.3.0"
   },
   "devDependencies": {
     "@types/body-parser": "1.16.8",
