--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@babel/standalone": "^7.0.0-beta.51",
     "body-parser": "^1.18.2",
     "brace": "^0.11.1",
-    "calder-gl": "calder-gl/calder#debug-tools",
+    "calder-gl": "calder-gl/calder#master",
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
     "lodash": "^4.17.10",
