--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@babel/standalone": "^7.0.0-beta.51",
     "body-parser": "^1.18.2",
     "brace": "^0.11.1",
-    "calder-gl": "calder-gl/calder#master",
+    "calder-gl": "file:../calder4",
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
+    "gl-matrix": "^2.8.1",
     "lodash": "^4.17.10",
     "milligram": "^1.3.0",
     "morgan": "^1.9.0",
