--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@babel/standalone": "^7.0.0-beta.51",
     "body-parser": "^1.18.2",
     "brace": "^0.11.1",
-    "calder-gl": "calder-gl/calder#master",
+    "calder-gl": "file:../calder",
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
     "fit-curve": "calder-gl/fit-curve#master",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/body-parser": "1.16.8",
     "@types/errorhandler": "0.0.32",
+    "@types/jest": "23.3.13",
     "@types/method-override": "0.0.31",
     "@types/morgan": "^1.7.35",
     "babel": "^6.23.0",
@@ -41,6 +42,7 @@
     "grunt-webpack": "^3.1.2",
     "nodemon": "^1.12.1",
     "ts-loader": "^4.4.1",
+    "ts-sinon": "1.0.12",
     "typescript": "^2.6.1",
     "webpack": "^4.12.0"
   }
